# d810-ng

./: .claude-instructions.md  .gitignore  AGENTS.md  AUTHORS.md  CI_RESULTS_IMPORT_PATH_FIX.md  CI_RESULTS_MODULE_LOADING.md  COVERAGE_ANALYSIS.md  FOL_CONVERSION_FEASIBILITY.md  IMPLEMENTATION_COMPLETE.md  INSTRUMENTATION_SUMMARY.md  MICROCODE_UNFLATTENING_PLAN.md  MIGRATION_GUIDE.md  MODULE_LOADING_STATUS.md  PATCH_APPLICATION_NOTES.md  PATH_TO_100_PERCENT.md  README.md  REFACTORED_RULES_NOT_REGISTERING.md  REFACTORING.md  REGISTRY_FIX_SUMMARY.md  RETROSPECTIVE.md  SCANNER_INVESTIGATION.md  SESSION_SUMMARY.md  WHY_OLD_RULES_EXECUTE.md  check_ida_availability.py  check_idapro.py  check_pytest.py  claude.md  direct_test_check.py  dsl_constraints_proposal.py  execute_pytest.sh  gitpatch.diff  pyproject.toml  run_abc_f6_test.py  run_abc_test.py  run_abc_test.sh  run_abc_test_simple.sh  run_pytest_check.sh  run_simple_test.py  run_structured_logging_tests.sh  run_symex_investigation.py  (+14 more)
.claude/: handoff_2024_11_30.md  handoff_2024_12_01_segfault.md  handoff_2024_12_01_session2.md
.claude/agents/: log-analyst.md  researcher.md
.claude/context/: 2025-11-30-test-dsl-coverage.md  hodur_unflattener_session.md  session-2025-11-29.md  test-dsl-proposal.md
.claude/handoffs/: 2025-12-04-run-abc-f6-test-with-logging.md  2025-12-04-symex-logging-infrastructure.md
.claude/investigations/: bead_d810ng-symex-01_or_state_machine_investigation.md  bead_d810ng-symex-02_decision.md  c_res_mop_none_issue.md  epic_symbolic_execution_architecture.md  hodur_profiling_results.md
.claude/knowledge/: moptracker_symbolic_execution.md
.claude/plans/: fix_hodur_deflattening.md  hodur_deobfuscation_algorithm.md  hodur_optimization_plan.md
.claude/skills/: cased-kit.md  docker-ida-testing.md  ida-direct-install.md  migration-verification.md  modern-search-tools.md
.claude/skills/ci-debugging/: SKILL.md
.claude/skills/github-api/: EXAMPLES.md  INSTALL.md  SKILL.md
.claude/skills/project-debugging/: SKILL.md
.claude/skills/project-verification/: SKILL.md
.claude/skills/using-superpowers/: SKILL.md
.github/workflows/: build-binaries.yml  build-cython.yml  python.yml  test-ida.yml  test-minimal.yml
docs/: BUILDING.md  DSL_MIGRATION.md  EGRAPH_DESIGN.md  MBA_PACKAGE_DESIGN.md  README.md  RULE_REGISTRY_MIGRATION.md  SDK_PXD_GAPS.md  TESTING_INSTRUMENTATION.md  cfg-modification-audit.md  symbolic-microcode-plan.md  triton-fallback-plan.md  triton-hybrid.md
docs/archive/: CONSTRAINT_DSL_DESIGN.md  MBA_PACKAGE_DESIGN.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  RETROSPECTIVE.md  TEST_ARCHITECTURE.md
samples/: AGENT.md  BUILD.md  Makefile  libobfuscated.def
samples/bins/: libobfuscated.dylib  libobfuscated_test.dylib
samples/include/: polyfill.h
samples/src/c/: approov_flattened.c  hodur_c2_flattened.c  manually_obfuscated.c  stubs.c  unwrap_loops.c
scripts/: README.md  check_github_actions.py  check_package_boundaries.py  convert_ida_imports.py  fix_remaining_symbols.py  install-triton-python.sh  lint_isinstance.py  lldb-it.sh  profile_unflattening.py  profile_unflattening_v2.py  run_integration_tests.sh
scripts/migration/: bulk_migrate_cst.py  constraint_dsl_implementation.py  dsl_constraints_proposal.py  example_rule_migration.py  fol_converter_poc.py  migrate_dynamic_const.py  test_constraint_dsl.py  test_constraint_dsl_minimal.py  test_constraint_final.py  test_constraint_infrastructure.py  test_imports.py
src/: D810.py
src/d810/: __init__.py  cache.py  manager.py  manager.py.rej  opcodes.py  qt_shim.py  registry.py  reloadable.py  stats.py  typing.py
src/d810/_vendor/: README.md  vendor.txt
src/d810/conf/: __init__.py  bogus_loops.json  default_unflattening_approov.json  default_unflattening_switch_case.json  eidolon.json  example_hodur.json  example_libobfuscated.json  example_libobfuscated_no_fixprecedessor.json  flatfold-noswitch.json  flatfold.json  flatfold.json.rej  state_machine_loops.json
src/d810/core/: __init__.py  cymode.py  platform.py  project.py  registry.py  stats.py
src/d810/cythxr/: cymode.py
src/d810/expr/: _ast.pyx  _ast_evaluate.pyx  _slow_ast.py  ast.pxd  ast.py  emulation_oracle.py  emulator.py  p_ast.py  utils.py  visitors.py  z3_utils.py
src/d810/hexrays/: block_helpers.py  cfg_utils.py  deferred_modifier.py  hexrays_formatters.py  hexrays_helpers.py  hexrays_helpers.py.rej  hexrays_hooks.py  hexrays_hooks.py.rej  tracker.py  tracker_components.py
src/d810/mba/: __init__.py  constants.py  constraints.py  dsl.py  rules.py  verifier.py  visitors.py
src/d810/mba/backends/: ida.py  (+3 more)
src/d810/optimizers/: __init__.py  caching.py  constraints.py  core.py  dsl.py  extensions.py  instrumentation.py  manager.py  parallel.py  profiling.py  rules.py
src/d810/testing/: assertions.py  runner.py
src/d810/ui/: ida_ui.py  testbed.py
src/speedups/cythxr/: _chexrays_api.cpp  _chexrays_api.html
src/speedups/expr/: ast.cpp  ast_evaluate.cpp  c_ast.cpp  c_ast.pyx  rly_fast_ast.cpp  rly_fast_ast.pyx
tests/: README.md  __init__.py  conftest.py  debug_rule_firing.py  run_ida_integration_tests.py  run_tests.py  run_tests_local.py
tests/system/: AST_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  TEST_CAPTURE_README.md  __init__.py  ast_test_mixin.py  clang_init.py  code_comparator.py  conftest.py  deobfuscation_assertions.py  example_capture_usage.py  ida_test_base.py  old_vs_new_baseline.json  stutils.py  test_ast_comparison.py  test_check_rules.py  test_libdeobfuscated.py  test_libdeobfuscated.py.rej  test_libdeobfuscated_dsl.py  test_libobfuscated_integration.py  test_mba_deobfuscation.py  test_old_vs_new_rules.py  test_optimization_rule.py  test_profile_libobfuscated.py  test_project_context_integration.py  test_rule_tracking.py  test_structural_deobfuscation.py  test_unflattening_characterization.py  test_unsafe_unflattener.py
tests/system/cases/: libobfuscated_comprehensive.py
tests/system/clang/: cindex.py
tests/unit/: conftest.py  test_ast_comparison.py  test_cache.py  test_egglog_pattern_gen.py  test_rule_registration.py  test_utils.py
(+159 files in other folders)
