[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "d810"
requires-python = ">= 3.10"
version = "0.1.0"
authors = [
    { name = "w00tzenheimer", email = "w00tzenheimer@gmail.com" },
    { name = "Boris Batteux", email = "boris.batteux@eshard.com" },
]
description = "This is a next generation version of D-810, an IDA Pro plugin which can be used to deobfuscate code at decompilation time by modifying IDA Pro microcode."
dependencies = ["z3-solver", "typing-extensions"]

[project.optional-dependencies]
dev = ["pyinstrument>=5.0.0,<6.0.0", "coverage[toml]", "pytest", "pytest-cov"]
ci = ["coverage[toml]", "pytest", "pytest-cov"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.cyright]
include = ["*.py", "src/", "include/"]
exclude = ["build/", "docs/", "scripts/", "samples/", "tests/"]

reportGeneralTypeIssues = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportMissingModuleSource = true

[tool.cython-lint]
max-line-length = 88
ignore = ['E503', 'E504']
exclude = []

[tool.coverage.run]
source = ["src/d810"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
