[build-system]
requires = ["setuptools>=77.0.1", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d810"
requires-python = ">= 3.10"
version = "0.1.0"
authors = [
    { name = "w00tzenheimer", email = "w00tzenheimer@gmail.com" },
    { name = "Boris Batteux", email = "boris.batteux@eshard.com" },
]
description = "This is a next generation version of D-810, an IDA Pro plugin which can be used to deobfuscate code at decompilation time by modifying IDA Pro microcode."
dependencies = ["z3-solver", "typing-extensions"]

[project.optional-dependencies]
dev = ["coverage[toml]", "pytest", "pytest-cov", "Cython>=3.0.0", "vendoring>=1.2.0"]
ci = ["coverage[toml]", "pytest", "pytest-cov", "Cython>=3.0.0"]
profiling = ["pyinstrument>=5.0.0,<6.0.0"]
speedups = ["Cython>=3.0.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include Cython source files in the distribution
# This allows users to rebuild extensions if needed
"*" = [
    "*.pyx",    # Cython implementation source
    "*.pxd",    # Cython header files
    "*.c",      # Cythonized C files (for source distributions)
    "*.cpp",    # Cythonized C++ files
    "*.h",      # C header files
    "*.hpp",    # C++ header files
]

[tool.cyright]
include = ["*.py", "src/", "include/"]
exclude = ["build/", "docs/", "scripts/", "samples/", "tests/"]

reportGeneralTypeIssues = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportMissingModuleSource = true

[tool.cython-lint]
max-line-length = 88
ignore = ['E503', 'E504']
exclude = []

[tool.coverage.run]
source = ["src/d810"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/d810/_vendor/*",  # Exclude vendored dependencies
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Vendoring configuration (following pip's approach)
# See src/d810/_vendor/README.md for documentation
[tool.vendoring]
destination = "src/d810/_vendor/"
requirements = "src/d810/_vendor/vendor.txt"
namespace = "d810._vendor"
protected-files = ["__init__.py", "README.md", "vendor.txt"]
patches-dir = "tools/vendoring/patches"

[tool.vendoring.transformations]
# Exclude unnecessary files to reduce repository size
drop = [
    "*.c",              # C extension source (we don't compile vendored packages)
    "*.so",             # Compiled extensions
    "*.dylib",          # macOS shared libraries
    "*.dll",            # Windows DLLs
    "test/",            # Tests
    "tests/",
    "testing/",
    "example/",
    "examples/",
    "doc/",
    "docs/",
    ".git/",
    ".github/",
    ".gitignore",
    "__pycache__/",
    "*.pyc",
    "*.pyo",
    "*.egg-info/",
]

# Rewrite imports if vendored packages import each other
# Example: substitute = [{match='from dependency import', replace='from d810._vendor.dependency import'}]
substitute = []

[tool.vendoring.license.fallback-urls]
# License fallback URLs for packages that don't bundle their license in distributions
# Note: vendoring tool normalizes package names to underscores
ida_reloader = "https://raw.githubusercontent.com/mahmoudimus/ida-reloader/main/LICENSE"
typing_extensions = "https://raw.githubusercontent.com/python/typing_extensions/main/LICENSE"

[tool.pytest.ini_options]
# Exclude vendored packages from testing
addopts = ["--ignore=src/d810/_vendor"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "pure_python: Tests that can run without IDA Pro (fast, no external dependencies)",
    "requires_ida: Tests that require IDA Pro to run",
    "slow: Slow tests (>10s) - typically Z3 verification",
]
